# rs-coffee

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  create_bin.sh  create_ota.sh  diagram.json  edit_diagram.json  flash.sh  my_partitions.csv  sdkconfig.defaults  todo.md  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml
chips/a02yyuw/: chip.json  chip.wasm
docs/: README.md
scripts/: build.sh  flash.sh
src/: app_state.rs  board.rs  boiler_pid.rs  config.rs  http_server_page.html  kv_store.rs  mailbox.rs  main.rs  mock_boiler.rs  system_status.rs  thermostat.rs  types.rs
src/api/: handlers_device.rs  handlers_drinks.rs  home_assistant.rs  mod.rs  mqtt.rs  rest.rs
src/components/: boiler.rs  mod.rs  ota.rs  pump.rs  sd_card.rs
src/gpio/: adc.rs  button.rs  mod.rs  pwm.rs  relay.rs  switch.rs
src/indicator/: ring.rs
src/models/: auto_tune.rs  boiler.rs  data_manipulation.rs  mod.rs  samples.rs  types.rs
src/schemas/: drink.json  drink.rs  error.rs  event.rs  mod.rs  postinfusion.rs  preinfusion.rs  shot.rs  status.rs  types.rs
src/sensors/: a02yyuw.rs  adc.rs  ambient.rs  boiler_temperature.rs  hx711.rs  mod.rs  pressure.rs  pt100.rs  scale.rs  traits.rs
src/state_machines/: auto_tune_fsm.rs  error.rs  mod.rs  operational_fsm.rs  system_fsm.rs  traits.rs
