[package]
name = "rs-coffee"
version = "0.1.0"
authors = ["phil <philip.barlow@hidglobal.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rs-coffee"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "=1.0.94"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
pid-ctrl = "0.1.4"
esp-idf-sys = { version = "*", features = ["binstart"] }
esp-idf-hal = "*"
ws2812-esp32-rmt-driver = { version = "0.10.0", features = [
    "smart-leds-trait",
] }
smart-leds = "0.4"
smart-leds-trait = { version = "0.3" }
smart_led_effects = "0.1.8"
loadcell = "0.2.0"
postcard = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[build-dependencies]
embuild = "0.32.0"
