[package]
name = "rs-coffee"
version = "0.1.0"
authors = ["phil <philip.barlow@hidglobal.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.81"

[[bin]]
name = "rs-coffee"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "device_nvs"]
simulate = ["dep:rand", "dep:rand_distr"]
device_nvs = []

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "=1.0.95"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.50", default-features = false, features = ["alloc", "experimental"] }
pid-ctrl = "0.1.4"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
# would be nice to remove the [default] rmt-legacy, but it's a bunch of work with the ws2812s
esp-idf-hal = {version = "0.45" }
ws2812-esp32-rmt-driver = { path = "../ws2812-esp32-rmt-driver", features = [
    "smart-leds-trait",
] }
# ws2812-esp32-rmt-driver = { version = "0.10.0", features = [
#     "smart-leds-trait",
# ] }
smart-leds = "0.4"
smart-leds-trait = { version = "0.3" }
smart_led_effects = "0.1.8"
loadcell = "0.2.0"
postcard = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
rand = { version = "0.8.4", optional = true }
rand_distr = { version = "0.4.2", optional = true }
embedded-svc = { version = "0.28", default-features = false }
dotenv_codegen = "0.15.0"
embedded-hal = "1.0.0"
one-wire-bus = { git = "https://github.com/daniel-larsen/one-wire-bus.git" }
ds18b20 = { git = "https://github.com/elwerene/ds18b20.git"}

[build-dependencies]
embuild = "0.33.0"

# Need to move the ws2812-esp32-rmt-driver to the new interface before picking this up
# [[package.metadata.esp-idf-sys.extra_components]]
# remote_component = { name = "onewire_bus", version = "^1.0.2" }

# [package.metadata.esp-idf-sys]
# esp_idf_components = ["fatfs"]